[tool.poetry]
name = "rain"
version = "0.1.0"
description = "Minecraft Classic server."
authors = ["mooncell07 <80042274+mooncell07@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
